Added the actual Javascript Code

--- a/1_CounterApp/index.html
+++ b/1_CounterApp/index.html
@@ -9,11 +9,9 @@
 <body>
     <h1>Counter</h1>
     <h1 id="count-el">0</h1>
-    <button id="increment-btn">Increment</button>
-    <button id="save-btn">Save</button>
-
-    <script>
-        document.getElementById('#count-el')
-    </script>
+    <button id="increment-btn" onclick="increment()">Increment</button>
+    <button id="save-btn" onclick="save()">Save</button>
+    <p id="prev">Previous Count: </p>
+    <script src="script.js"></script>
 </body>
 </html>
