Solved a little Bug

--- a/2_Calculator/index.html
+++ b/2_Calculator/index.html
@@ -22,6 +22,6 @@
 
         <span id="sum-el">Sum: </span>
 
-    <script src="scrit.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
