--- a/6_Random Password Generator/index.html
+++ b/6_Random Password Generator/index.html
@@ -20,10 +20,12 @@
             <button>Generate Password</button>
 
             <div class="passwords">
-                <div class="password">Password 1</div>
-                <div class="password">Password 2</div>
-                <div class="password">Password 3</div>
-                <div class="password">Password 4</div>
+                <div class="password">...</div>
+                <div class="password">...</div>
+                <div class="password">...</div>
+                <div class="password">...</div>
+                <!-- Toast container -->
+                <div id="toast">Password Copied!</div>
             </div>
         </div>
 
