actual random password logic

--- a/6_Random Password Generator/index.html
+++ b/6_Random Password Generator/index.html
@@ -17,7 +17,7 @@
             <label for="lengthRange">Password Length: <span id="sliderValue">10</span></label>
             <input type="range" id="lengthRange" min="8" max="12" value="10" step="1">
 
-            <button>Generate Password</button>
+            <button id="generatebtn">Generate Password</button>
 
             <div class="passwords">
                 <div class="password">...</div>
