--- a/8_Drum Kit/index.html
+++ b/8_Drum Kit/index.html
@@ -8,43 +8,55 @@
 </head>
 <body>
     <div class="keys">
-        <div class="key">
+        <div data-key="65" class="key">
             <kbd>A</kbd>
             <span class="sound">clap</span>
         </div>
-        <div class="key">
+        <div data-key="83" class="key">
             <kbd>S</kbd>
             <span class="sound">hihat</span>
         </div>
-        <div class="key">
+        <div data-key="68" class="key">
             <kbd>D</kbd>
             <span class="sound">kick</span>
         </div>
-        <div class="key">
+        <div data-key="70" class="key">
             <kbd>F</kbd>
             <span class="sound">openhat</span>
         </div>
-        <div class="key">
+        <div data-key="71" class="key">
             <kbd>G</kbd>
             <span class="sound">boom</span>
         </div>
-        <div class="key">
+        <div data-key="72" class="key">
             <kbd>H</kbd>
             <span class="sound">ride</span>
         </div>
-        <div class="key">
+        <div data-key="74" class="key">
             <kbd>J</kbd>
             <span class="sound">snare</span>
         </div>
-        <div class="key">
+        <div data-key="75" class="key">
             <kbd>K</kbd>
             <span class="sound">tom</span>
         </div>
-        <div class="key">
+        <div data-key="76" class="key">
             <kbd>L</kbd>
             <span class="sound">tink</span>
         </div>
     </div>
+
+    <audio data-key="65" src="Audio/clap.wav"></audio>
+    <audio data-key="83" src="Audio/hihat.wav"></audio>
+    <audio data-key="68" src="Audio/kick.wav"></audio>
+    <audio data-key="70" src="Audio/openhat.wav"></audio>
+    <audio data-key="71" src="Audio/boom.wav"></audio>
+    <audio data-key="72" src="Audio/ride.wav"></audio>
+    <audio data-key="74" src="Audio/snare.wav"></audio>
+    <audio data-key="75" src="Audio/tom.wav"></audio>
+    <audio data-key="76" src="Audio/tink.wav"></audio>
+
+
     <script src="script.js"></script>
 </body>
 </html>
