--- a/9_Search Filter/index.html
+++ b/9_Search Filter/index.html
@@ -5,22 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
     <div class="flex flex-col gap-10 items-center">
         <input class="px-5 py-5 rounded outline-none bg-[#111] text-[#888]" placeholder="Search..." type="text" name="" id="">
-        <div class="flex gap-10">
-            <div class="card">
-                <img src="" class="bg-img" alt="">
-                <div class="blurred-layer"></div>
-                <div class="content">
-                    <h3>User 123</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, molestias recusandae? Voluptatem ratione necessitatibus sit possimus perferendis, eos illo? Quam alias delectus ad, tenetur quis velit explicabo molestias repudiandae aperiam?</p>
-                </div>
-            </div>
+        <div class="cards flex gap-10">
+            
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+
+    
     <script src="script.js"></script>
 </body>
 </html>
